homework3/2-kubernetes/service-two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-dev
spec:
  selector:
    matchLabels:
      app: service2-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: service2-dev
    spec:
      containers:
        - name: service2-dev
          image: http-server:1.0
          ports:
            - containerPort: 8080
