homework3/2-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: service1.xyz
      http:
        paths:
          - backend:
              serviceName: service1-dev
              servicePort: 8080
    - host: service2.xyz
      http:
        paths:
          - backend:
              serviceName: service2-dev
              servicePort: 8080
